external-crates/move/crates/move-compiler/tests/move_check/verification/spec_only_do_filter_function.exp
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/verification/spec_only_do_filter_function.move:6:9
  │
6 │         bar()
  │         ^^^ Unbound function 'bar' in current scope

